# interview-beon-radpair

./: .gitignore  README.md
apps/api/: pyproject.toml
apps/api/src/: app_initializer.py  main.py  router.py
apps/api/src/controller/: audio_controller.py
apps/api/src/service/: llm_service.py  speech_to_text_service.py
apps/api/src/system/: routes.py
apps/web/: craco.config.js  package-lock.json  package.json  tsconfig.paths.json
apps/web/public/: index.html
apps/web/src/: App.tsx
apps/web/src/components/layouts/: mainLayout.tsx  navbar.tsx
apps/web/src/components/pages/: mainPage.tsx
docs/: Insomnia_Api_Collection_2024-10-31.json
docs/videos/: Flight Test 1.mov  Flight Test 2.mov
